fixed quality on mobile devices

--- a/src/app/components/contribute/contribute.component.scss
+++ b/src/app/components/contribute/contribute.component.scss
@@ -1,4 +1,5 @@
 :host {
+    background-color: cadetblue;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
