--- a/src/app/components/explore/explore.component.scss
+++ b/src/app/components/explore/explore.component.scss
@@ -1,10 +1,36 @@
 :host {
+    display: block;
     height: 100vh;
-    background-color: cadetblue;
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
+    background-color: rgba(0, 0, 0, 0);
+    position: relative;
     canvas {
-        flex: 1 1 auto;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
     }
+    span {
+        color: white;
+    }
+}
+
+.tl {
+    top: 0;
+    left: 0;
+}
+
+.tr {
+    top: 0;
+    right: 0;
+}
+
+.bl {
+    bottom: 0;
+    left: 0;
+}
+
+.br {
+    bottom: 0;
+    right: 0;
 }
