--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 html { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: ghostwhite; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: ghostwhite; overflow-x: hidden; }
 .show-border { border: solid 1px red;}
